--- a/aimHigh/docs/latex/earthwidget_8h.tex
+++ b/aimHigh/docs/latex/earthwidget_8h.tex
@@ -7,11 +7,14 @@ Open\+GL based Qt class, displays 3D sphere that is model of Earth.
 
 {\ttfamily \#include $<$QOpen\+GLWidget$>$}\newline
 {\ttfamily \#include $<$QOpen\+GLFunctions$>$}\newline
-Include dependency graph for earthwidget.\+h\+:\nopagebreak
+{\ttfamily \#include $<$QOpen\+GLTexture$>$}\newline
+{\ttfamily \#include $<$QImage$>$}\newline
+Include dependency graph for earthwidget.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=304pt]{earthwidget_8h__incl}
+\includegraphics[width=350pt]{earthwidget_8h__incl}
 \end{center}
 \end{figure}
 This graph shows which files directly or indirectly include this file\+:\nopagebreak
