--- a/aimHigh/docs/latex/mainwindow_8h.tex
+++ b/aimHigh/docs/latex/mainwindow_8h.tex
@@ -9,9 +9,13 @@ Defines the \doxylink{classMainWindow}{Main\+Window} class.
 {\ttfamily \#include $<$QLabel$>$}\newline
 {\ttfamily \#include $<$QWidget$>$}\newline
 {\ttfamily \#include $<$QVBox\+Layout$>$}\newline
+{\ttfamily \#include $<$Qt3\+DCore$>$}\newline
+{\ttfamily \#include $<$QPush\+Button$>$}\newline
+{\ttfamily \#include $<$QDate\+Time\+Edit$>$}\newline
 {\ttfamily \#include "{}apihandler.\+h"{}}\newline
 {\ttfamily \#include "{}earthwidget.\+h"{}}\newline
-Include dependency graph for mainwindow.\+h\+:\nopagebreak
+Include dependency graph for mainwindow.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
