--- a/aimHigh/docs/latex/earthwidget_8h_source.tex
+++ b/aimHigh/docs/latex/earthwidget_8h_source.tex
@@ -1,39 +1,43 @@
 \doxysection{earthwidget.\+h}
 \hypertarget{earthwidget_8h_source}{}\label{earthwidget_8h_source}\mbox{\hyperlink{earthwidget_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
-\DoxyCodeLine{00001\ \textcolor{comment}{//\ earthwidget.h}}
+\DoxyCodeLine{00001\ \ \textcolor{comment}{//\ earthwidget.h}}
 \DoxyCodeLine{00002\ }
 \DoxyCodeLine{00008\ \textcolor{preprocessor}{\#ifndef\ EARTHWIDGET\_H}}
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#define\ EARTHWIDGET\_H}}
 \DoxyCodeLine{00010\ }
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ <QOpenGLWidget>}}
 \DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ <QOpenGLFunctions>}}
-\DoxyCodeLine{00017\ \textcolor{keyword}{class\ }\mbox{\hyperlink{classearthWidget}{earthWidget}}\ :\ \textcolor{keyword}{public}\ QOpenGLWidget,\ \textcolor{keyword}{protected}\ QOpenGLFunctions}
-\DoxyCodeLine{00018\ \{}
-\DoxyCodeLine{00019\ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00023\ \ \ \ \ \textcolor{keyword}{explicit}\ \mbox{\hyperlink{classearthWidget}{earthWidget}}(QWidget\ *parent\ =\ \textcolor{keyword}{nullptr});}
-\DoxyCodeLine{00024\ \ \ \ \ \textcolor{keywordtype}{void}\ setISSPosition(\textcolor{keywordtype}{float}\ latitude,\ \textcolor{keywordtype}{float}\ longitude,\ \textcolor{keywordtype}{float}\ altitude);}
-\DoxyCodeLine{00025\ }
-\DoxyCodeLine{00026\ \textcolor{keyword}{public}\ slots:}
-\DoxyCodeLine{00035\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_aef1b878fd8f9210e7583967f43e820b3}{updateISSData}}(\textcolor{keywordtype}{double}\ longitude,\ \textcolor{keywordtype}{double}\ latitude,\ \textcolor{keywordtype}{double}\ altitude,\ \textcolor{keywordtype}{double}\ velocity,\ \textcolor{keywordtype}{double}\ timestamp);}
-\DoxyCodeLine{00036\ \textcolor{keyword}{protected}:}
-\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a9524bd2f90eebb12e56c7d5d899691e2}{initializeGL}}()\ \textcolor{keyword}{override};}
-\DoxyCodeLine{00041\ }
-\DoxyCodeLine{00042\ }
-\DoxyCodeLine{00049\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a5ac5a2dd69147a5805a078826e3f6185}{resizeGL}}(\textcolor{keywordtype}{int}\ w,\ \textcolor{keywordtype}{int}\ h)\ \textcolor{keyword}{override};}
-\DoxyCodeLine{00054\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a3bd31b9ddd755cc8cd2237ba858ea94b}{paintGL}}()\ \textcolor{keyword}{override};}
-\DoxyCodeLine{00055\ }
-\DoxyCodeLine{00056\ }
-\DoxyCodeLine{00057\ \textcolor{keyword}{private}:}
+\DoxyCodeLine{00013\ \textcolor{preprocessor}{\#include\ <QOpenGLTexture>}}
+\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ <QImage>}}
+\DoxyCodeLine{00019\ \textcolor{keyword}{class\ }\mbox{\hyperlink{classearthWidget}{earthWidget}}\ :\ \textcolor{keyword}{public}\ QOpenGLWidget,\ \textcolor{keyword}{protected}\ QOpenGLFunctions}
+\DoxyCodeLine{00020\ \{}
+\DoxyCodeLine{00021\ \textcolor{keyword}{public}:}
+\DoxyCodeLine{00025\ \ \ \ \ \textcolor{keyword}{explicit}\ \mbox{\hyperlink{classearthWidget}{earthWidget}}(QWidget\ *parent\ =\ \textcolor{keyword}{nullptr});}
+\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{void}\ setISSPosition(\textcolor{keywordtype}{float}\ latitude,\ \textcolor{keywordtype}{float}\ longitude,\ \textcolor{keywordtype}{float}\ altitude);}
+\DoxyCodeLine{00027\ }
+\DoxyCodeLine{00028\ \textcolor{keyword}{public}\ slots:}
+\DoxyCodeLine{00037\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_aef1b878fd8f9210e7583967f43e820b3}{updateISSData}}(\textcolor{keywordtype}{double}\ longitude,\ \textcolor{keywordtype}{double}\ latitude,\ \textcolor{keywordtype}{double}\ altitude,\ \textcolor{keywordtype}{double}\ velocity,\ \textcolor{keywordtype}{double}\ timestamp);}
+\DoxyCodeLine{00038\ \textcolor{keyword}{protected}:}
+\DoxyCodeLine{00042\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a9524bd2f90eebb12e56c7d5d899691e2}{initializeGL}}()\ \textcolor{keyword}{override};}
+\DoxyCodeLine{00043\ }
+\DoxyCodeLine{00044\ }
+\DoxyCodeLine{00051\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a5ac5a2dd69147a5805a078826e3f6185}{resizeGL}}(\textcolor{keywordtype}{int}\ w,\ \textcolor{keywordtype}{int}\ h)\ \textcolor{keyword}{override};}
+\DoxyCodeLine{00056\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a3bd31b9ddd755cc8cd2237ba858ea94b}{paintGL}}()\ \textcolor{keyword}{override};}
+\DoxyCodeLine{00057\ }
 \DoxyCodeLine{00058\ }
-\DoxyCodeLine{00059\ }
-\DoxyCodeLine{00060\ \ \ \ \ \textcolor{keywordtype}{float}\ \mbox{\hyperlink{classearthWidget_acd4fca77ccdc3ae3fc985d8db10620ed}{issLat}}\ =\ 0.0;\ }
-\DoxyCodeLine{00061\ \ \ \ \ \textcolor{keywordtype}{float}\ \mbox{\hyperlink{classearthWidget_ad738e8de88eab589dc00e8bf8237907e}{issLon}}\ =\ 0.0;\ }
-\DoxyCodeLine{00062\ \ \ \ \ \textcolor{keywordtype}{float}\ \mbox{\hyperlink{classearthWidget_a4e0c26ad5499a182e4695a81368daa3e}{issAlt}}\ =\ 0.0;\ }
+\DoxyCodeLine{00059\ \textcolor{keyword}{private}:}
+\DoxyCodeLine{00060\ }
+\DoxyCodeLine{00061\ \ \ \ \ QOpenGLTexture*\ earthTexture\ =\ \textcolor{keyword}{nullptr};\ }
+\DoxyCodeLine{00062\ }
 \DoxyCodeLine{00063\ }
-\DoxyCodeLine{00072\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a17590eb4136992f9c881367630aa4958}{drawSphere}}(\textcolor{keywordtype}{int}\ lats,\ \textcolor{keywordtype}{int}\ longs,\ \textcolor{keywordtype}{float}\ r,\ \textcolor{keyword}{const}\ QColor\ \&color);}
-\DoxyCodeLine{00073\ \};}
-\DoxyCodeLine{00074\ }
-\DoxyCodeLine{00075\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ EARTHWIDGET\_H}}
+\DoxyCodeLine{00064\ \ \ \ \ \textcolor{keywordtype}{float}\ \mbox{\hyperlink{classearthWidget_acd4fca77ccdc3ae3fc985d8db10620ed}{issLat}}\ =\ 0.0;\ }
+\DoxyCodeLine{00065\ \ \ \ \ \textcolor{keywordtype}{float}\ \mbox{\hyperlink{classearthWidget_ad738e8de88eab589dc00e8bf8237907e}{issLon}}\ =\ 0.0;\ }
+\DoxyCodeLine{00066\ \ \ \ \ \textcolor{keywordtype}{float}\ \mbox{\hyperlink{classearthWidget_a4e0c26ad5499a182e4695a81368daa3e}{issAlt}}\ =\ 0.0;\ }
+\DoxyCodeLine{00067\ }
+\DoxyCodeLine{00076\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classearthWidget_a17590eb4136992f9c881367630aa4958}{drawSphere}}(\textcolor{keywordtype}{int}\ lats,\ \textcolor{keywordtype}{int}\ longs,\ \textcolor{keywordtype}{float}\ r,\ \textcolor{keyword}{const}\ QColor\ \&color);}
+\DoxyCodeLine{00077\ \};}
+\DoxyCodeLine{00078\ }
+\DoxyCodeLine{00079\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ EARTHWIDGET\_H}}
 
 \end{DoxyCode}
