--- a/aimHigh/docs/latex/earthwidget_8h.tex
+++ b/aimHigh/docs/latex/earthwidget_8h.tex
@@ -9,8 +9,7 @@ Open\+GL based Qt class, displays 3D sphere that is model of Earth.
 {\ttfamily \#include $<$QOpen\+GLFunctions$>$}\newline
 {\ttfamily \#include $<$QOpen\+GLTexture$>$}\newline
 {\ttfamily \#include $<$QImage$>$}\newline
-Include dependency graph for earthwidget.\+h\+:
-\nopagebreak
+Include dependency graph for earthwidget.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
