--- a/aimHigh/docs/latex/mainwindow_8h.tex
+++ b/aimHigh/docs/latex/mainwindow_8h.tex
@@ -14,8 +14,7 @@ Defines the \doxylink{classMainWindow}{Main\+Window} class.
 {\ttfamily \#include $<$QDate\+Time\+Edit$>$}\newline
 {\ttfamily \#include "{}apihandler.\+h"{}}\newline
 {\ttfamily \#include "{}earthwidget.\+h"{}}\newline
-Include dependency graph for mainwindow.\+h\+:
-\nopagebreak
+Include dependency graph for mainwindow.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
